[project]
    name = "cloudflare-iac"
    version = "0.1.0"
    description = "My CloudFlare configuration as code"
    license = { text = "MIT" }
    readme = "README.md"
    authors = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    requires-python = ">=3.12"
    dependencies = [
        "pulumi==3.167.0",
        "pulumi-cloudflare==6.1.2"
    ]

[tool.uv]
    dev-dependencies = ["pre-commit>=3.2.0"]
    package          = false

[tool.pyright]
    typeCheckingMode           = "basic"
    venvPath                   = "."
    venv                       = ".venv"
    reportMissingParameterType = true
