[project]
    name            = "cloudflare-iac"
    version         = "0.1.0"
    description     = "My CloudFlare configuration as code"
    license         = { text = "MIT" }
    readme          = "README.md"
    authors         = [{ name = "Nathan Vaughn", email = "nath@nvaughn.email" }]
    requires-python = ">=3.12"
    dependencies    = ["pulumi>=3.205.0", "pulumi-cloudflare==6.17.0"]

[dependency-groups]
    dev = [
    "prek>=0.4.5",
]

[tool.uv]
    package = false

